--- a/webroot/movie_heaven/statement/disclaimer/index.html
+++ b/webroot/movie_heaven/statement/disclaimer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>帮帮妙招使用协议</title>
+    <title>免责声明</title>
     <link href="index.css" rel="stylesheet" type="text/css">
 
     <style>
