--- a/webroot/movie_heaven/apps/install_app/index.html
+++ b/webroot/movie_heaven/apps/install_app/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html >
 <head>
     <meta charset="UTF-8">
     <title>安装观影天堂</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <link href="index.css" rel="stylesheet" type="text/css">
+
+    <style>
+
+    </style>
 </head>
 
-<body>
-<h2> 请使用苹果的safari浏览器打开本页面，然后点击 安装  </h2>
-<h1><a href="itms-services://?action=download-manifest&url=https://www.gallifrey.cn/movie_heaven/apps/MovieHeaven/MovieHeaven.plist"> 安装</a>  </h1>
-</center>
+<body >
+    <div class="tip"> 请使用苹果的safari浏览器打开本页面，然后点击 安装  </div>
+    <img src="../MovieHeaven/image.512x512.png" class="logo">
+    <div class="name">观影天堂</div>
+    <a class="install" href="itms-services://?action=download-manifest&url=https://www.gallifrey.cn/movie_heaven/apps/MovieHeaven/MovieHeaven.plist">安装</a>
+
 </body>
 </html>
