--- a/webroot/movie_heaven/apps/install_app/index.html
+++ b/webroot/movie_heaven/apps/install_app/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body >
-    <div class="tip"> 请使用苹果的safari浏览器打开本页面，然后点击 安装  </div>
+    <div class="tip"> 请您使用Safari浏览器打开本页面，然后点击 安装  </div>
     <img src="../MovieHeaven/image.512x512.png" class="logo">
     <div class="name">观影天堂</div>
     <a class="install" href="itms-services://?action=download-manifest&url=https://www.gallifrey.cn/movie_heaven/apps/MovieHeaven/MovieHeaven.plist">安装</a>
