下载页新增安装教程

--- a/webroot/movie_heaven/apps/install_app/index.html
+++ b/webroot/movie_heaven/apps/install_app/index.html
@@ -16,6 +16,20 @@
     <img src="../MovieHeaven/image.512x512.png" class="logo">
     <div class="name">观影天堂</div>
     <a class="install" href="itms-services://?action=download-manifest&url=https://www.gallifrey.cn/movie_heaven/apps/MovieHeaven/MovieHeaven.plist">安装</a>
-
+    <div class="how_to_install">
+        <div class="how_to_install_title">首次安装须知</div>
+        <div class="how_to_install_tip">关于在iOS系统中安装企业版应用时提示“未收信任的企业级开发者”的解决办法</div>
+        <div class="how_to_install_tip">由于苹果公司的政策调整，在iOS系统中安装企业版应用会出现以下提示</div>
+        <img src='./imgs/alert.png'>
+        <div class="how_to_install_tip">可以按照以下步骤来进行设置</div>
+        <div class="how_to_install_step">
+            <div>1，在系统中打开 设置</div>
+            <div>2，选择通用-描述文件（设备管理）</div>
+            <div>3，选择对应的描述文件，点击信任按钮</div>
+            <div>4，完成，返回桌面重新打开</div>
+        </div>
+        <img src='./imgs/operation.gif'>
+    </div>
 </body>
+
 </html>
