修改下载页标题，增加隐藏的图片用作微信缩略图

--- a/webroot/movie_heaven/apps/install_app/index.html
+++ b/webroot/movie_heaven/apps/install_app/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
     <meta charset="UTF-8">
-    <title>安装观影天堂</title>
+    <title>观影天堂-资源齐全的视频APP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link href="index.css" rel="stylesheet" type="text/css">
 
@@ -12,15 +12,18 @@
 </head>
 
 <body >
+    <div style="display: none">
+        <img src="../MovieHeaven/image.512x512.png"/>
+    </div>
     <div class="tip"> 请您使用Safari浏览器打开本页面，然后点击 安装  </div>
-    <img src="../MovieHeaven/image.512x512.png" class="logo">
+    <img src="../MovieHeaven/image.512x512.png" class="logo"/>
     <div class="name">观影天堂</div>
     <a class="install" href="itms-services://?action=download-manifest&url=https://www.gallifrey.cn/movie_heaven/apps/MovieHeaven/MovieHeaven.plist">安装</a>
     <div class="how_to_install">
         <div class="how_to_install_title">首次安装须知</div>
         <div class="how_to_install_tip">关于在iOS系统中安装企业版应用时提示“未收信任的企业级开发者”的解决办法</div>
         <div class="how_to_install_tip">由于苹果公司的政策调整，在iOS系统中安装企业版应用会出现以下提示</div>
-        <img src='./imgs/alert.png'>
+        <img src='./imgs/alert.png'/>
         <div class="how_to_install_tip">可以按照以下步骤来进行设置</div>
         <div class="how_to_install_step">
             <div>1，在系统中打开 设置</div>
@@ -28,7 +31,7 @@
             <div>3，选择对应的描述文件，点击信任按钮</div>
             <div>4，完成，返回桌面重新打开</div>
         </div>
-        <img src='./imgs/operation.gif'>
+        <img src='./imgs/operation.gif'/>
     </div>
 </body>
 
