--- a/webroot/movie_heaven/apps/install_app/index.html
+++ b/webroot/movie_heaven/apps/install_app/index.html
@@ -5,7 +5,9 @@
     <title>观影天堂-资源齐全的视频APP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link href="index.css" rel="stylesheet" type="text/css">
-
+    <script type="text/javascript" src="../../jsUtils/browser.js"></script>
+    <script type="text/javascript" src="index.js">
+    </script>
     <style>
 
     </style>
@@ -15,8 +17,8 @@
     <div style="display: none">
         <img src="../MovieHeaven/image.512x512.png"/>
     </div>
-    <div class="tip"> 请您使用Safari浏览器打开本页面，然后点击 安装  </div>
-    <img src="../MovieHeaven/image.512x512.png" class="logo"/>
+    <div class="tip"> 请您使用Safari浏览器打开本页面 </div>
+    <img src="../MovieHeaven/image.512x512.png" class="logo" id="app_logo"/>
     <div class="name">观影天堂</div>
     <a class="install" href="itms-services://?action=download-manifest&url=https://www.gallifrey.cn/movie_heaven/apps/MovieHeaven/MovieHeaven.plist">安装</a>
     <div class="how_to_install">
