--- a/webroot/movie_heaven/apps/install_app/index.html
+++ b/webroot/movie_heaven/apps/install_app/index.html
@@ -17,7 +17,7 @@
     <div style="display: none">
         <img src="../MovieHeaven/image.512x512.png"/>
     </div>
-    <div class="tip"> 请您使用Safari浏览器打开本页面 </div>
+    <div class="tip"> 欢迎使用观影天堂 </div>
     <img src="../MovieHeaven/image.512x512.png" class="logo" id="app_logo"/>
     <div class="name">观影天堂</div>
     <a class="install" href="itms-services://?action=download-manifest&url=https://www.gallifrey.cn/movie_heaven/apps/MovieHeaven/MovieHeaven.plist">安装</a>
