发布更新增加用户名密码

--- a/webroot/movie_heaven/management/app_update_publish/index.html
+++ b/webroot/movie_heaven/management/app_update_publish/index.html
@@ -11,6 +11,14 @@
         <div class="form">
             <form action="/movie_heaven/api/v1/management/app_update_publish/submit" enctype="multipart/form-data" method="post" >
                 <div class="tr">
+                    <span>用户名</span>
+                    <input type="text" name="userName" value="shiwenwen">
+                </div>
+                <div class="tr">
+                    <span>密码</span>
+                    <input type="password" name="password">
+                </div>
+                <div class="tr">
                     <span>选择软件包</span>
                     <input type="file" name="package">
                 </div>
