添加网站小图标

--- a/webroot/movie_heaven/apps/install_app/index.html
+++ b/webroot/movie_heaven/apps/install_app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link href="index.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="../../jsUtils/browser.js"></script>
+    <link rel="shortcut icon" href="../../imgs/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="index.js">
     </script>
     <style>
