--- a/webroot/movie_heaven/management/app_update_publish/index.html
+++ b/webroot/movie_heaven/management/app_update_publish/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="index.css" rel="stylesheet" type="text/css">
     <title>发布更新</title>
+    <link rel="shortcut icon" href="../../imgs/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
