--- a/webroot/movie_heaven/statement/disclaimer/index.html
+++ b/webroot/movie_heaven/statement/disclaimer/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>免责声明</title>
     <link href="index.css" rel="stylesheet" type="text/css">
-
+    <link rel="shortcut icon" href="../../imgs/favicon.ico" type="image/x-icon">
     <style>
 
     </style></head>
